--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,10 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.8.3",
+    "axios": "^1.6.3",
     "fluent-ffmpeg": "^2.1.3",
     "node-fetch": "^3.3.2",
     "ytdl-core": "^4.11.5"
   },
-  "devDependencies": {}
+  "dependencies": {
+  "axios": "^1.6.3",
+  "fluent-ffmpeg": "^2.1.3",
+  "node-fetch": "^3.3.2",
+  "ytdl-core": "^4.11.5"
+}
+
 }
