--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node-fetch": "^3.3.2",
     "ytdl-core": "^4.11.5"
   },
-  "dependencies": {
+  "devDependencies": {
   "axios": "^1.6.3",
   "fluent-ffmpeg": "^2.1.3",
   "node-fetch": "^3.3.2",
