--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,16 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.3",
-    "fluent-ffmpeg": "^2.1.3",
-    "node-fetch": "^3.3.2",
-    "ytdl-core": "^4.11.5"
+    "node-fetch": "2.6.12"
   },
-  "devDependencies": {
-  "axios": "^1.6.3",
-  "fluent-ffmpeg": "^2.1.3",
-  "node-fetch": "^3.3.2",
-  "ytdl-core": "^4.11.5"
-}
-
+  "devDependencies": {}
 }
